--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,4 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
-
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+CS 594 Socially Responsible AI: Theories and Practice. 2022 Fall.
